--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,11 @@
-title: "Napkin"
-remote_theme: pmarsceill/just-the-docs
-color_scheme: "dark"
-search_enabled: false
+title: Napkin Wiki
+email: daniil.iaitskov@soostone.com
+description: >- # this means to ignore newlines until "baseurl:"
+  Napkin Wiki with howtos and tutorials.
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: jekyllrb
+github_username:  jekyll
+
+
+theme: "just-the-docs"
